@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4OpenGLXmRotationCallbacks.cc,v 1.8 2001-01-25 12:09:57 johna Exp $
+// $Id: G4OpenGLXmRotationCallbacks.cc,v 1.9 2001-04-02 14:04:41 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -30,10 +30,10 @@ void G4OpenGLXmViewer::theta_rotation_callback (Widget w,
   XmArrowButtonCallbackStruct *cbs = (XmArrowButtonCallbackStruct*) callData;
   G4OpenGLXmViewer* pView = (G4OpenGLXmViewer*) clientData;
 
-  pView->rotate_right = G4OpenGLXmViewer::get_boolean_userData (w);
+  pView->rotate_right = get_boolean_userData (w);
 
   if (cbs->reason == XmCR_ARM) {
-    G4OpenGLXmViewer::rotate_in_theta (pView, NULL);
+    rotate_in_theta (pView, NULL);
   } else if (cbs->reason == XmCR_DISARM) {
     XtRemoveTimeOut (pView->rotation_timer);
   }
@@ -88,7 +88,7 @@ void G4OpenGLXmViewer::rotate_in_theta (XtPointer clientData,
   pView->rotation_timer = XtAppAddTimeOut 
     (pView->app,
      timer_id == NULL ? 500 : 1,
-     G4OpenGLXmViewer::rotate_in_theta,
+     rotate_in_theta,
      pView);
 }  
 
@@ -99,10 +99,10 @@ void G4OpenGLXmViewer::phi_rotation_callback (Widget w,
   XmArrowButtonCallbackStruct *cbs = (XmArrowButtonCallbackStruct*) callData;
   G4OpenGLXmViewer* pView = (G4OpenGLXmViewer*) clientData;
 
-  pView->rotate_up = G4OpenGLXmViewer::get_boolean_userData (w);
+  pView->rotate_up = get_boolean_userData (w);
 
   if (cbs->reason == XmCR_ARM) {
-    G4OpenGLXmViewer::rotate_in_phi (pView, NULL);
+    rotate_in_phi (pView, NULL);
   } else if (cbs->reason == XmCR_DISARM) {
     XtRemoveTimeOut (pView->rotation_timer);
   }
@@ -154,7 +154,7 @@ void G4OpenGLXmViewer::rotate_in_phi (XtPointer clientData,
   pView->rotation_timer = XtAppAddTimeOut 
     (pView->app,
      timer_id == NULL ? 500 : 1,
-     G4OpenGLXmViewer::rotate_in_phi,
+     rotate_in_phi,
      pView);
 }
 
@@ -190,7 +190,7 @@ void G4OpenGLXmViewer::set_rot_subject_callback (Widget w,
 {
   G4OpenGLXmViewer* pView = (G4OpenGLXmViewer*)clientData;
   
-  G4int choice = G4OpenGLXmViewer::get_int_userData (w);
+  G4int choice = get_int_userData (w);
   
   switch (choice) {
   case 0: 
@@ -224,7 +224,7 @@ void G4OpenGLXmViewer::wobble_callback (Widget w,
   pView->wobble_timer = XtAppAddTimeOut
     (pView->app,
      (long unsigned int) (1000. * (1. / pView->wob_sens)),
-     G4OpenGLXmViewer::wobble_timer_callback,
+     wobble_timer_callback,
      pView);
 }  
 
@@ -258,7 +258,7 @@ void G4OpenGLXmViewer::wobble_timer_callback (XtPointer clientData,
     pView->wobble_timer = XtAppAddTimeOut
       (pView->app,
        (long unsigned int) (1000. * (1. / pView->wob_sens)),
-       G4OpenGLXmViewer::wobble_timer_callback,
+       wobble_timer_callback,
        pView);
   }
 }
